# Complex-unzip-tool-v2

./: .bumpversion.cfg  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  REFACTOR_SUMMARY.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_v1.1.0.md  RELEASE_SUMMARY.md  STANDALONE_BUILD.md  TODOS.md  build.bat  build_exe.py  debug_validation.py  fix_unicode.py  output.txt  passwords.txt  pyproject.toml  validate.py
.kilocode/workflows/: opsx-bulk-archive.md  opsx-onboard.md  opsx-verify.md
.opencode/: package-lock.json
RelaseNotes/: RELEASE_NOTES_v1.1.10.md  RELEASE_NOTES_v1.1.11.md  RELEASE_NOTES_v1.1.7.md  RELEASE_NOTES_v1.1.8.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md
complex_unzip_tool_v2/: __init__.py  __main__.py  archive_extractor.py  console_utils.py  display_utils.py  file_collector.py  file_grouper.py  file_organizer.py  file_renamer.py  filename_utils.py  main.py  main_new.py  main_old.py  multipart_detector.py  password_manager.py  path_validator.py
complex_unzip_tool_v2/classes/: ArchiveExceptions.py  ArchiveGroup.py  ArchiveTypes.py  (+1 more)
demo/: archive.7z.001  archive.7z.002  backup.7z.001  backup.7z.002  desktop.ini  passwords.txt
demo_cloaked/: .hidden_config  shortcut.lnk
openspec/: project.md
scripts/: build.bat  build.py  generate_icon.py  standalone_main.py  version.py
test_recursive/: root_file.txt
tests/: __init__.py  test_archive_extractor.py  test_archive_utils.py  test_cloaked_file_detector.py  test_file_renamer.py  test_file_utils.py  test_main.py  test_multipart_retention.py  test_password_manager.py  test_regex.py  test_rename_history.py
(+54 files in other folders)
