[tool.poetry]
name = "complex-unzip-tool-v2"
version = "0.1.0"
description = "A complex tool for unzipping files"
authors = ["Rozx <lisida900710@gmail.com>"]
readme = "README.md"
packages = [{include = "complex_unzip_tool_v2"}]

[tool.poetry.scripts]
complex-unzip = "complex_unzip_tool_v2.main:main"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.0.0"
# pyinstaller = "^6.0.0"  # Not compatible with Python 3.13 yet

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
