[tool.poetry]
name = "complex-unzip-tool-v2"
version = "1.1.0"
description = "A powerful tool for extracting complex archive files with password support and multipart handling"
authors = ["Rozx <lisida900710@gmail.com>"]
readme = "README.md"
packages = [{include = "complex_unzip_tool_v2"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
typer = "^0.17.3"
rich = "^14.1.0"
send2trash = "^1.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pyinstaller = "^6.15.0"

[tool.poetry.scripts]
main = "complex_unzip_tool_v2.main:app"
cuz = "complex_unzip_tool_v2.main:app"
build = "scripts.build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
